--- a/css/main.css
+++ b/css/main.css
@@ -367,16 +367,20 @@ input[type=button] {
   padding-right: 15px;
 }
 
-.mission .content-wrapper,
-.contact-section .content-wrapper {
-
-}
-
-.contact-content {
-}
-
-.map {
+.map figure {
   width: 100%;
+  position: relative;
+  padding-bottom: 80%;
+  height: 0;
+  overflow: hidden;
+}
+
+.map iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 /* ==========================================================================
