--- a/css/main.css
+++ b/css/main.css
@@ -185,10 +185,12 @@ header figure {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  padding-bottom: 10px;
 }
 
 .header-divider {
   width: 100%;
+  border-bottom: 1px solid #3a3a3a;
 }
 
 header nav {
@@ -220,7 +222,11 @@ footer {
    width: 55%;
 }
 
- .footer p {
+ footer h4 {
+   margin-top: 0;
+ }
+
+ footer p {
    margin: 0;
 }
 
@@ -258,6 +264,7 @@ footer {
 }
 
  .copyright {
+  margin-bottom: 10px;
   text-align: center;
 }
 
@@ -272,15 +279,22 @@ footer {
   background-size: cover;
 }
 
+.hero-area h1 {
+  margin: 0;
+}
+
 /***** ASIDE *****/
 aside {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
-  padding: 30px 15px 55px 15px;
   background: #527158;
+  padding-bottom: 50px;
+}
 
+aside .form-description h3 {
+  margin-bottom: 0;
 }
 
 aside .form {
@@ -327,9 +341,14 @@ input[type=button] {
 }
 
 .features-items {
-  width: 55%;
+  width: 62.5%;
   text-align: center;
   margin: 30px 0;
+}
+
+.features h2 {
+  margin: 0;
+  padding-right: 15px;
 }
 
 .features p {
@@ -351,8 +370,12 @@ input[type=button] {
   background: #2a423a;
 }
 
+.reviews h2 {
+  margin-top: 0;
+}
+
 .reviews h3 {
-  width: 50%;
+  width: 60%;
 }
 
 /*--------------------- MOBILE STYLES - FAQ ---------------------*/
@@ -363,6 +386,7 @@ input[type=button] {
   flex-flow: row wrap;
   padding-left: 15px;
   padding-right: 15px;
+  background: #527158;
 }
 
 .faq .content-wrapper {
@@ -370,6 +394,21 @@ input[type=button] {
   justify-content: flex-start;
   align-items: center;
   flex-flow: row wrap;
+  margin-top: 50px;
+}
+
+.faq h2 {
+  margin-top: 0;
+  margin-bottom: 50px;
+}
+
+.faq h3 {
+  line-height: 1.333;
+  margin: 0;
+}
+
+.faq p {
+  margin-bottom: 50px;
 }
 
 /*--------------------- MOBILE STYLES - ABOUT ---------------------*/
@@ -381,6 +420,34 @@ input[type=button] {
   flex-flow: row wrap;
   padding-left: 15px;
   padding-right: 15px;
+}
+
+.mission {
+  background: #527158;
+}
+
+.contact-section {
+  background: #2a423a;
+}
+
+.mission .content-wrapper,
+.contact-section .content-wrapper {
+  margin: 50px 0;
+}
+
+.mission h2,
+.contact-section h2 {
+  margin: 0;
+}
+
+.mission h4,
+.contact-section h4 {
+  margin-top: 10px;
+  margin-bottom: 0;
+}
+
+.contact-section p {
+  margin-top: 10px;
 }
 
 .map figure {
@@ -501,7 +568,7 @@ input[type=button] {
 
     h3,
     h4 {
-      font-size: 1.5em;
+      font-size: 1.333em;
     }
 
     .content-wrapper {
@@ -545,6 +612,7 @@ input[type=button] {
 
     footer .content-wrapper {
       width: 80%;
+      margin: 100px 0;
     }
 
     .footer-content {
@@ -556,6 +624,10 @@ input[type=button] {
     .contact,
     .social {
       width: 35%;
+    }
+
+    .contact {
+      margin-bottom: 0;
     }
 
     .social-icons {
@@ -577,10 +649,6 @@ input[type=button] {
      padding: 0 64px;
    }
 
-   .hero-area h1 {
-     width: 85%;
-   }
-
    /***** ASIDE *****/
    aside {
      padding: 0 64px;
@@ -594,11 +662,15 @@ input[type=button] {
      flex-flow: row wrap;
    }
 
-   aside .content-wrapper .form-description {
+   aside h3 {
+     margin-top: 0;
+   }
+
+   aside .form-description {
      width: 40%;
    }
 
-   aside .content-wrapper .form {
+   aside .form {
      width: 45%;
      margin: 0;
    }
@@ -652,12 +724,13 @@ input[type=button] {
  /*--------------------- TABLET STYLES - FAQ ---------------------*/
    .faq {
      padding: 0 64px;
-     margin: 50px 0;
    }
 
    .faq .content-wrapper {
      justify-content: space-between;
      align-items: baseline;
+     margin-top: 100px;
+     margin-bottom: 65px;
    }
 
    .faq-content {
@@ -666,6 +739,17 @@ input[type=button] {
 
    .faq h2 {
      width: 100%;
+     line-height: 1.333;
+     margin-bottom: 35px;
+   }
+
+   .faq h3 {
+     font-size: 0.875em;
+     line-height: 1.285;
+   }
+
+   .faq p {
+     margin-bottom: 35px;
    }
 
  /*--------------------- TABLET STYLES - ABOUT ---------------------*/
@@ -674,29 +758,44 @@ input[type=button] {
      padding: 0 64px;
    }
 
-   .mission-content {
-     display: flex;
-     justify-content: space-between;
-     align-items: baseline;
+   .mission .content-wrapper,
+   .contact-section .content-wrapper {
+     margin: 100px 0;
+   }
+
+   .mission h2, .contact-section h2 {
+     margin-bottom: 15px;
    }
 
    .mission-content p {
      width: 45%;
    }
 
+   .contact-section h2 {
+     width: 85%;
+   }
+
+   .contact-section h4 {
+     margin-top: 20px;
+   }
+
+   .mission-content {
+     width: 100%;
+     display: flex;
+     justify-content: space-between;
+     align-items: baseline;
+   }
+
    .map figure {
      padding-bottom: 45%;
    }
 
-   .contact-section .content-wrapper h2 {
-     width: 85%;
-   }
-
-   .contact-section .content-wrapper address div {
+   .contact-section address div {
      width: 45%;
    }
 
    .contact-content {
+     width: 100%;
      display: flex;
      justify-content: space-between;
      align-items: baseline;
@@ -761,7 +860,7 @@ input[type=button] {
 
    .contact, .social {
      width: 20%;
-     padding: 0 3em; 
+     padding: 0 3em;
    }
 
    .social-icons i {
@@ -772,6 +871,10 @@ input[type=button] {
    /***** HERO AREA *****/
     .hero-area {
       padding: 0 100px;
+    }
+
+    .hero-area .content-wrapper {
+      margin: 45px 0;
     }
 
     .hero-area h1 {
@@ -802,13 +905,17 @@ input[type=button] {
     }
 
     .features-items {
-      padding: 25px 60px;
+      padding: 25px 50px;
       flex-basis: 20%;
     }
 
      /***** REVIEWS *****/
      .reviews {
        padding: 0 100px;
+     }
+
+     .reviews h2 {
+       margin-bottom: 100px;
      }
 
      .reviews article div {
@@ -821,22 +928,49 @@ input[type=button] {
        padding: 0 100px;
      }
 
+     .faq .content-wrapper {
+       margin-bottom: 60px;
+     }
+
+     .faq h3 {
+       font-size: 1em;
+       line-height: 1;
+     }
+
+     .faq p {
+       line-height: 1;
+       margin-bottom: 40px;
+     }
+
    /*--------------------- DESKTOP STYLES - ABOUT ---------------------*/
      .mission,
      .contact-section {
        padding: 0 100px;
      }
 
+     .mission h2, .contact-section h2 {
+       font-size: 2.66em;
+     }
+
      .mission h2 {
        width: 90%;
      }
 
-     .map figure {
-       padding-bottom: 37%;
+     .contact-section h2 {
+       width: 100%;
+       line-height: 1.5;
      }
 
-     .contact-section .content-wrapper h2 {
-       width: 100%;
+     .contact-section h4 {
+      margin-top: 10px;
+     }
+
+     .contact-section p {
+      margin-top: 20px;
+     }
+
+     .map figure {
+       padding-bottom: 37%;
      }
 }
 
